2010-01-21  Andrei Popescu  <andreip@google.com>

        Reviewed by David Levin.

        [Android] bindings/v8/V8DOMWrapper.h[cpp] are missing guards for XPATH and XSLT features
        https://bugs.webkit.org/show_bug.cgi?id=33944

        Inside V8DOMWrapper.h[cpp], the code for XPATH and XSLT features is not guarded
        by the appropriate #if ENABLE(feature) macros. Add the missing guards.
        V8DOMWrapper.cpp includes ChromiumBridge.h for no reason. Remove the include.

        No new tests needed, functionality not changed.

        * bindings/v8/V8DOMWrapper.cpp:
        (WebCore::V8DOMWrapper::getTemplate):
        * bindings/v8/V8DOMWrapper.h:

2010-01-21  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Darin Adler.

        Intermittent crash when media element is adopted by another document
        https://bugs.webkit.org/show_bug.cgi?id=33919
        rdar://problem/7557527
        
        Test: media/adopt-node-crash.html

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::willMoveToNewOwnerDocument): Unregister for
        document callbacks.
        (WebCore::HTMLMediaElement::didMoveToNewOwnerDocument): Register for
        document callbacks.
        * html/HTMLMediaElement.h:

2010-01-21  Adam Roben  <aroben@apple.com>

        More Windows build fixing

        * WebCore.vcproj/WebCore.vcproj: Copy bridge/jsc in the post-build
        event of all configurations, not just Debug.

2010-01-21  Thiago Macieira  <thiago.macieira@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Fix incorrect dependency to QtXmlPatterns in generated include/QtWebKit/QtWebKit header

        The generated file includes QtXmlPatterns/QtXmlPatterns, which is neither used/required by
        the public QtWebKit API nor will it be available if Qt is configured with -no-xmlpatterns.

        * WebCore.pro: Trick syncqt to believe that xmlpatterns is not a dependency, so that it's not